--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -21,7 +21,7 @@ p {
 	margin-top: 40px;
 	text-align: center;
 }
-		
+
 .series {
 	margin: 0px;
 	padding: 0px;
@@ -33,7 +33,7 @@ p {
 		height: 50px;
 		padding: 10px 10px 10px 40px;
 		width: 100%;
-		
+
 		@include border-top-radius($appborderradius - 10);
 		background-color: $seriestitlebgcolor;
 		color: #fff;
@@ -75,13 +75,13 @@ p {
 		left: 5px;
 		z-index: 3;
 
-		background: url(/images/checkbox-unchecked-small.png) no-repeat bottom left;
+		background: url(../images/checkbox-unchecked-small.png) no-repeat bottom left;
 		height: 20px;
 		width: 25px;
 	}
 
 	input[type=checkbox]:checked + .custom-checkbox {
-		background-image: url(/images/checkbox-checked-small.png);
+		background-image: url(../images/checkbox-checked-small.png);
 	}
 }
 
@@ -93,27 +93,27 @@ p {
 	border: solid 3px $itembordercolor;
 	@include border-radius($itemborderradius);
 	margin: 5px;
-	
+
 	@include box-shadow($itemshadowcolor 5px 5px 3px);
 }
 
 .series-sub-list-item {
 		background-color: transparent;
-		
+
 		position: relative;
 		display: inline-block;
 		border: solid 0px transparent;
-		
+
 		border-radius: 0px;
 		border-top-left-radius: 0px;
 		border-bottom-left-radius: 0px;
-		
+
 		margin: 0px;
 		float: left;
 		list-style-type: none;
 		width: auto;
 		height: 53px;
-		
+
 		@include box-shadow(none);
 }
 
@@ -170,9 +170,9 @@ img.colors {
 	padding-right: 3px;
 	padding-left: 5px;
 	height: 30px;
-	
+
 	border-bottom-left-radius: 5px;
-	
+
 	opacity: 0.7;
 	background-color: $numberbgcolor;
 	color: $numbertextcolor;
