--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/css?family=Orbitron:400,500);
+@import url(//fonts.googleapis.com/css?family=Orbitron:400,500);
 *, *:before, *:after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 html, body { font-size: 100%; }
